--- a/day4_lab.ipynb
+++ b/day4_lab.ipynb
@@ -364,7 +364,7 @@
         "**개선 사항:**\n",
         "1.  **측정값 기반 미분 (Derivative on Measurement):** 미분 킥을 방지합니다.\n",
         "2.  **안티-와인드업 (Anti-Windup):** 적분 와인드업을 방지합니다.\n",
-        "3.  **가변 `dt` 처리:** 실제 시간을 측정하여 계산 정확도를 높입니다. (이 실습에서는 시뮬레이션의 편의를 위해 고정 `dt`를 사용하지만, 실제 코드에서는 `time.time()`을 사용해야 함을 인지합니다.)"
+        "3.  **가변 `dt` 처리:** 실제 시간을 측정하여 계산 정확도를 높입니다.<br>(이 실습에서는 시뮬레이션의 편의를 위해 고정 `dt`를 사용하지만, 실제 코드에서는 `time.time()`을 사용해야 함을 인지합니다.)"
       ]
     },
     {
@@ -414,7 +414,7 @@
         "        output = p_term + i_term + d_term\n",
         "\n",
         "        # Conditional integration for anti-windup\n",
-        "        if self.min_out < output < self.max_out:\n",
+        "        if (self.min_out < output < self.max_out):\n",
         "            self.integral += error * dt\n",
         "        # --- END TO-DO ---\n",
         "\n",
